--- a/compras/templates/crear_producto.html
+++ b/compras/templates/crear_producto.html
@@ -1,8 +1,11 @@
 {% extends "index.html" %}
 {% block title %}Crear nuevo Producto{% endblock %}
 
-{% block container %}
-    <h1>Crear nuevo Producto</h1>
+{% block content %}
+
+    
+    <h2 class="p-2">Crear nuevo producto</h2>
+    
     {% if mensaje %}
       <div class="alert alert-warning" role="alert">
           {{ mensaje }}
@@ -22,11 +25,12 @@
           <label for="Stock actual" class="form-label">Stock actual</label>
           <input type="number" class="form-control" id="Stock actual" name="stock_actual">
         </div>
-        <select class="form-select mb-3" aria-label="Default select example" name="proveedor">
+        <select id="proveedor-select" class="form-select mb-3" aria-label="Default select example" name="proveedor">
           <option selected>Seleccionar proveedor</option>
           {% for proveedor in proveedores %}
             <option value={{proveedor.dni}}>{{proveedor.nombre}} {{proveedor.apellido}}</option>
           {% endfor %}
+          <!-- Futura implementación: opción de ampliar el formulario para cargar Producto y Proveedor en simultáneo -->
           <!-- <option value="nuevo"><a href="{% url 'proveedores_crear' %}">-- Agregar nuevo --</a></option> -->
         </select>
         <div class="form group mb-3">
@@ -34,6 +38,6 @@
         </div>
         <button type="submit" class="btn btn-primary mb-2">Guardar</button>
       </form>
-    <a class="mb-3" href="{% url 'productos_listado' %}">Volver al Listado</a>
+    <a class="mb-3" href="{% url 'productos_listado' %}">Volver al Listado</a>  
 
 {% endblock %}
