--- a/compras/templates/crear_proveedor.html
+++ b/compras/templates/crear_proveedor.html
@@ -1,8 +1,10 @@
 {% extends "index.html" %}
 {% block title %}Crear nuevo Proveedor{% endblock %}
 
-{% block container %}
-    <h1>Crear nuevo Proveedor</h1>
+{% block content %}
+    
+    <h2 class="p-2">Crear nuevo Proveedor</h2>
+    
     {% if mensaje %}
         <div class="alert alert-warning" role="alert">
             {{ mensaje }}
