--- a/compras/templates/index.html
+++ b/compras/templates/index.html
@@ -1,19 +1,42 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Stock Control{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 </head>
 <body>
-    <div class="container" name="container">
-        {% block container %}
-            <h1>Home</h1>
-            <a href="{% url 'productos_listado' %}">Lista de Productos</a>
-            <a href="{% url 'proveedores_listado' %}">Lista de Proveedores</a>
+    
+    {% block navbar %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid d-flex ">
+                <a class="navbar-brand fs-1" href="{% url 'home' %}">Stock Control</a>
+                <a class="btn btn-secondary" href="/admin/"  target="_blank" role="button">Admin</a>
+            </div>
+        </nav>
+    {% endblock %}
+
+    <div class="container-fluid">
+        {% block content %}
+            <div class="d-flex justify-content-center mt-5">
+                <a class="btn btn-primary font-weight-normal me-3" href="{% url 'productos_listado' %}" role="button">Lista de Productos</a>
+                <a class="btn btn-primary font-weight-normal" href="{% url 'proveedores_listado' %}" role="button">Lista de Proveedores</a>
+            </div>
+            <img src="static/assets/fondo-stock-control-1.jpg" class="background" alt="fondo">
+
+        {% include 'footer.html' %}
+        {% block footer %}{% endblock %}
+
         {% endblock %}
     </div>
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelector('.background').classList.add('animate-zoom');
+        });
+    </script>
 </body>
 </html>
