--- a/compras/templates/lista_productos.html
+++ b/compras/templates/lista_productos.html
@@ -1,10 +1,10 @@
 {% extends "index.html" %}
 {% block title %}Lista de productos{% endblock %}
-
-{% block container %}
-    <h2>Lista de Productos</h2>
+{% block content %}
     
-    <a class="mb-2" href="{% url 'productos_crear' %}">Agregar nuevo producto</a>
+    <h2 class="p-2">Lista de Productos</h2>
+    
+    <a class="p-2" href="{% url 'productos_crear' %}">Agregar nuevo producto</a>
     
     <table class="table mt-3">
         <thead>
@@ -29,6 +29,7 @@
         </tbody>
     </table> 
     <br>
-    <a href="{% url 'proveedores_listado' %}">Lista de Proveedores</a>
-
+    <div class="d-flex justify-content-between">
+        <a class="text-left" href="{% url 'proveedores_listado' %}">Lista de Proveedores</a>
+    </div>
 {% endblock %}
