--- a/compras/templates/index.html
+++ b/compras/templates/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Stock Control{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
-    
+    <!-- Encabezado fijo en todas las páginas -->
     {% block navbar %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid d-flex ">
@@ -16,27 +17,37 @@
             </div>
         </nav>
     {% endblock %}
-
     <div class="container-fluid">
         {% block content %}
+
+            <!-- Links a lista de productos y proveedores -->
             <div class="d-flex justify-content-center mt-5">
                 <a class="btn btn-primary font-weight-normal me-3" href="{% url 'productos_listado' %}" role="button">Lista de Productos</a>
                 <a class="btn btn-primary font-weight-normal" href="{% url 'proveedores_listado' %}" role="button">Lista de Proveedores</a>
             </div>
-            <img src="static/assets/fondo-stock-control-1.jpg" class="background" alt="fondo">
 
-        {% include 'footer.html' %}
-        {% block footer %}{% endblock %}
+            <!-- Imagen de fondo animada con CSS -->
+            <img src="{% static 'assets\fondo-stock-control-1.jpg' %}" class="background" alt="fondo">
+            <script>
+                document.addEventListener('DOMContentLoaded', function() {
+                    document.querySelector('.background').classList.add('animate-zoom');
+                });
+            </script>
 
+            <!-- Pie de página con logos y link a Github personal -->
+            <footer class="fixed-bottom">               
+                <div class="container-fluid d-flex justify-content-around align-items-center bg-light">
+                        <p class="text-center">Trabajo integrador:<br>Fundamentos de Django</p>
+                        <img src="{% static '\assets\logos-alkemy.png' %}"  class="footer-image" alt="logos">
+                        <a class="navbar-brand fs-6 p-2" href="https://github.com/donpipon" target="_blank">Andrés Bonelli</a>
+                </div>
+            </footer>
         {% endblock %}
     </div>
-    
+
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            document.querySelector('.background').classList.add('animate-zoom');
-        });
-    </script>
+    
 </body>
 </html>
