--- a/compras/templates/index.html
+++ b/compras/templates/index.html
@@ -39,7 +39,7 @@
                 <div class="container-fluid d-flex justify-content-around align-items-center bg-light">
                         <p class="text-center">Trabajo integrador:<br>Fundamentos de Django</p>
                         <img src="{% static '\assets\logos-alkemy.png' %}"  class="footer-image" alt="logos">
-                        <a class="navbar-brand fs-6 p-2" href="https://github.com/donpipon" target="_blank">Andrés Bonelli</a>
+                        <a class="navbar-brand fs-6 p-2" href="https://github.com/andresbonelli" target="_blank">Andrés Bonelli</a>
                 </div>
             </footer>
         {% endblock %}
